Fri Mar 18 21:30:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_to_s): Move from flo_to_s.

	* numeric.c (Integer#to_s): Move from Fixnum#to_s.

Fri Mar 18 16:22:24 2016  Victor Nawothnig  <Victor.Nawothnig@gmail.com>

	* parse.y (parse_numvar): NTH_REF must be less than a half of
	  INT_MAX, as it is left-shifted to be ORed with back-ref flag.
	  [ruby-core:74444] [Bug#12192] [Fix GH-1296]

Fri Mar 18 12:25:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (tick): fix missing close parenthesis.  [Fix GH-1291]

Fri Mar 18 10:24:12 2016  Naotoshi Seo  <sonots@gmail.com>

	* ext/date/date_core.c (datetime_to_time): preserve timezone info
	  [Bug #12189] [Fix GH-1295]

Fri Mar 18 10:17:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (rb_big_hash): make it public function to be available in
	  other source files, and remove documentation comment for Bignum#hash.

	* bignum.c (Bignum#hash): remove its definition because it is unified
	  with Object#hash.

	* include/ruby/intern.h (rb_big_hash): add a prototype declaration.

	* hash.c (any_hash): treat Bignum values directly.

Fri Mar 18 02:35:12 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/time.rb (parse, strptime): Fix Time.parse/strptime does not
	  have compatibility with DateTime.parse/strptime in terms of parsing
	  timezone [Bug #12190] [Fix GH-1297]

Fri Mar 18 02:17:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (fix_zero_p, fix_even_p, fix_odd_p): remove needless
	  functions.

Fri Mar 18 02:15:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_even_p): treat Fixnum and Bignum values directly.

Fri Mar 18 02:07:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (Bignum#even?, Bignum#odd?): remove definitions
	  because they are unified with Integer#even? and Integer#odd?.

	* numeric.c (Fixnum#zero?, Fixnum#even?, Fixnum#odd?): remove
	  definitions because they are unified with Numeric#zero?,
	  Integer#even?, and Integer#odd?.
