@@ -1,3 +1,10 @@
+Fri Mar 18 21:57:00 2016  Kenta Murata  <mrkn@mrkn.jp>
+
+	* bignum.c (rb_big_to_s, Bignum#to_s): remove its definition because
+	  it is unified with Integer#to_s.
+
+	* numeric.c (int_to_s): treat Bignum values directly.
+
 Fri Mar 18 21:30:00 2016  Kenta Murata  <mrkn@mrkn.jp>
 
 	* numeric.c (int_to_s): Move from flo_to_s.
